Add insert product to accounts

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,8 @@
 @import url(shopping_cart.css);
 @import url(your_orders.css);
 @import url(vertical_menu.css);
+@import url(ver_menu_account.css);
+
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700,300);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
