--- a/public/css/common.css
+++ b/public/css/common.css
@@ -56,6 +56,6 @@ padding: 1%;
 
 .btn-success {
     color: #fff;
-    background-color: #5def8a;
-    border-color: #5def8a;
+    background-color: #3097D1;
+    border-color: #3097D1;
 }
