--- a/public/css/admin_forms.css
+++ b/public/css/admin_forms.css
@@ -4,11 +4,10 @@
     margin-right:auto;
     max-width: 100%;
     background: #F3F3F3;
-    font-family: Raleway,sans-serif;
-    box-shadow: 10px 10px 10px 10px;
+
     padding: 25px 15px 25px 10px;
 
-    color: #888;
+    color: #3097D1;
     text-shadow: 1px 1px 1px #FFF;
     border:1px solid #E4E4E4;
 }
