--- a/public/css/common.css
+++ b/public/css/common.css
@@ -70,3 +70,84 @@ padding: 1%;
     }
 }
 
+
+/**/
+body{
+    font-family: verdana;
+    font-size: 12px;
+    margin: 10px;
+}
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.table{
+    width: 100%;
+}
+.table .tableRow{
+    width: 100%;
+    float: left;
+    /*border-bottom: 1px solid #ccc;*/
+}
+.table .tableRow:nth-child(odd){
+    background-color: #f1f1f1;
+}
+.table .tableRow .tableCell{
+    float: left;
+    padding: 10px;
+    width: 25%;
+    /*border-right: 1px solid #ccc;*/
+}
+.tableCell
+.open{
+    float: right;
+}
+.table .tableRow .tableCell:first-child{
+    /*border-left: 1px solid #ccc;*/
+}
+.table .tableRow:first-child{
+    /*border-top: 1px solid #ccc;*/
+    background-color: #BDBDBD;
+}
+.table .subTables{
+    display: none;
+    width: 100%;
+    float: left;
+    border-bottom: none;
+}
+.cellBorderTop{
+    border-top: 1px solid #ccc;
+}
+.inwardTable
+.tableCell:nth-child(1){
+    width: 5%;
+}
+.inwardTable
+.tableCell:nth-child(2){
+    width: 15%;
+}
+.inwardTable
+.tableCell:nth-child(3){
+    width: 10%;
+}
+.inwardTable
+.tableCell:nth-child(4){
+    width: 17%;
+}
+.inwardTable
+.tableCell:nth-child(5){
+    width: 17%;
+}
+.inwardTable
+.tableCell:nth-child(6){
+    width: 10%;
+}
+.inwardTable
+.tableCell:nth-child(7){
+    width: 11%;
+}
+.inwardTable
+.tableCell:nth-child(8){
+    width: 15%;
+}
